--- a/style.css
+++ b/style.css
@@ -3,6 +3,12 @@ body{
 }
 
 
+img{
+    width: 500px;
+    height: auto;
+}
+
+
 .first,
 .second{
     background-color: #1F2936;
@@ -12,15 +18,26 @@ body{
     padding-left: 12%;
     padding-right: 12%;
     width: auto;
-    margin: 0;
+    align-items: center;
+    color: #F9FAF8;
+}
+
+
+.first{
+    height: 40px;
+}
+
+
+.second{
+    height: 400px;
 }
 
 
 .first-left{
     font-size: 24px;
-    color: #F9FAF8;
     font-weight: 700;
 }
+
 
 .first-right{
     display: flex;
@@ -28,8 +45,37 @@ body{
     justify-content: space-between;
 }
 
+
 a{
     text-decoration: none;
-    color: #E5E7EB;
     font-size: 18px;
+    color: #F9FAF8;
+}
+
+
+.second-left{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+}
+
+
+.second-left .header{
+    font-size: 48px;
+    font-weight: bold;
+}
+
+
+.second-left .not-header{
+    font-size: 18px;
+}
+
+
+.second-left button{
+    background-color: #3882F6;
+    width: 30%;
+    margin-top: 10px;
+    font-size: 22px;
+    border-radius: 7px;
+    color: #F9FAF8;
 }
