--- a/style.css
+++ b/style.css
@@ -189,3 +189,13 @@ a{
     border: 3px solid #E5E7EB;
     color: #E5E7EB;
 }
+
+
+.sixth{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1F2937;
+    padding: 30px;
+    color: #E5E7EB
+}
